--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,9 @@ html,
 body {
   margin: 0;
   padding: 0;
-}
-
-canvas {
-  display: block;
+  width: 100%;
+  height: 100%;
+  overflow: hidden; /* Prevent scrolling */
 }
 
 button {
